# robot-kinematics-xc

./: .gitignore  COMPLETE_IK_GUIDE.md  IK_IMPLEMENTATION_SUMMARY.md  pyproject.toml
docs/: IK_IMPLEMENTATION.md  INHERITANCE_GUIDE.md
examples/: README.md  a2d_arm_ik_example.py  dummy_example.py  pinocchio_backend_example.py  pinocchio_ik_example.py  urdfpy_backend_example.py
robot_kinematcis/: __init__.py
robot_kinematcis/backends/: base_kinematics_backend.py
robot_kinematcis/compat/: urdfpy_compat.py
robot_kinematcis/frames/: __init__.py  transforms.py
robot_kinematcis/urdf/: inspector.py
robot_kinematics/: __init__.py
robot_kinematics/backends/: __init__.py  base_kinematics_backend.py  dummy_backend.py  pinocchio_backend.py  urdfpy_backend.py
robot_kinematics/core/: __init__.py  robot_kinematics.py  types.py
robot_kinematics/data/g1/A2D_120s/urdf/: A2D.urdf
robot_kinematics/data/g1/A2D_120s/urdf/meshes/: Link1_r.STL  Link2_r.STL  Link3_l.STL  Link4_l.STL  Link5_l.STL  base_link.STL  link_pitch_head.STL  link_up_down_body.STL
robot_kinematics/data/g1/G1_120s/urdf/: G1_120s.urdf
robot_kinematics/data/g1/G1_120s/urdf/meshes/: Link1_l.STL  (+13 more)
robot_kinematics/examples/: sdk_example.py
robot_kinematics/examples/sdk/: basic_fk_ik.py  fk_full_joint_array.py  fk_joint_dict.py  ik_result_to_dict.py  ik_with_active_joints.py  sdk_basic_fk_ik_example.py  urdfpy_with_visual.py
robot_kinematics/frames/: __init__.py  transforms.py
robot_kinematics/urdf/: README.md  inspector.py
tests/: test_pinocchio_ik.py  test_pinocchio_ik_pose_movements.py
